# Discord-Snitch

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  words
.devcontainer/: Dockerfile  devcontainer.env.dist  devcontainer.json
.github/workflows/: build.yml
