[tool.poetry]
name = "bslvtest"
version = "0.1.0"
description = ""
authors = ["Mr. Glass <mrglass@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.6"
"discord.py" = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
